--- a/project/style.css
+++ b/project/style.css
@@ -13,7 +13,7 @@ header,footer {
 
 nav {
     float: left;
-    width: 100px;
+    width: 12%;
     margin: 0;
     color: white;
     background-color: orange;
